--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,21 @@
 			<scope>test</scope>
 		</dependency>
 
+
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-spring-boot-starter</artifactId>
 			<version>11.0.3</version>
 		</dependency>
+
+		<!-- from https://stackoverflow.com/questions/39979660/i-cannot-initiate-a-principal-in-keycloakadapter -->
+		<!--
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-admin-client</artifactId>
+			<version>12.0.1</version>
+		</dependency>
+		-->
 
 		<!--
 		<dependency>
