--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,23 @@
 			<version>5.4.2</version>
 		</dependency>
 
+		<!-- Angular -->
+		<!--
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>angular</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		-->
+
+		<!-- I thought AngularJS
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>angularjs</artifactId>
+			<version>1.7.9</version>
+		</dependency>
+		-->
+
 	</dependencies>
 
 	<dependencyManagement>
